--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nuxt/test-utils": "^3.19.2",
     "@nuxtjs/storybook": "^9.0.1",
     "@storybook/addon-docs": "^9.1.7",
+    "@storybook/test": "^8.6.14",
     "@vue/test-utils": "^2.4.6",
     "happy-dom": "^18.0.1",
     "playwright-core": "^1.55.0",
